package edu.hm.cs.katz.swt2.agenda.common;

public enum StatusEnum {
  NEU, OFFEN, FERTIG, ABGELAUFEN;
}
