@startuml

title __AGENDA20's Class Diagram__\n


    class MavenWrapperDownloader {
    }

  

      class edu.hm.cs.katz.swt2.agenda.AgendaApplication {
      }

  


      class edu.hm.cs.katz.swt2.agenda.AgendaConfiguration {
      }

  


        class edu.hm.cs.katz.swt2.agenda.common.SecurityHelper {
        }

  


        enum StatusEnum {
        }

  


        class edu.hm.cs.katz.swt2.agenda.common.UuidProviderImpl {
        }

  


        class edu.hm.cs.katz.swt2.agenda.initialization.DemoData {
        }

  


        class edu.hm.cs.katz.swt2.agenda.initialization.Initializer {
        }

  


        abstract class edu.hm.cs.katz.swt2.agenda.mvc.AbstractController {
        }



        class edu.hm.cs.katz.swt2.agenda.mvc.IndexController {
        }

  


        class edu.hm.cs.katz.swt2.agenda.mvc.TaskController {
        }

  


        class edu.hm.cs.katz.swt2.agenda.mvc.TopicController {
        }

  


        class edu.hm.cs.katz.swt2.agenda.mvc.UserController {
        }

  

        class edu.hm.cs.katz.swt2.agenda.persistence.Status {
        }

  


        interface edu.hm.cs.katz.swt2.agenda.persistence.StatusRepository {
        }

  


        class edu.hm.cs.katz.swt2.agenda.persistence.Task {
        }

  


        interface edu.hm.cs.katz.swt2.agenda.persistence.TaskRepository {
        }

  


        class edu.hm.cs.katz.swt2.agenda.persistence.Topic {
        }

  


        interface edu.hm.cs.katz.swt2.agenda.persistence.TopicRepository {
        }

  

        class edu.hm.cs.katz.swt2.agenda.persistence.User {
        }

  


        interface edu.hm.cs.katz.swt2.agenda.persistence.UserRepository {
        }

  


        class edu.hm.cs.katz.swt2.agenda.service.DtoMapper {
        }

  

        interface edu.hm.cs.katz.swt2.agenda.service.TaskService {
        }

  

        class edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl {
        }

  

        interface edu.hm.cs.katz.swt2.agenda.service.TopicService {
        }

  


        class edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl {
        }

  


        interface edu.hm.cs.katz.swt2.agenda.service.UserService {
        }

  


        class edu.hm.cs.katz.swt2.agenda.service.UserServiceImpl {
        }

  


          class edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTaskDto {
          }

  


          class edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTopicDto {
          }

  


          class edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto {
          }

  


          class edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto {
          }


          class edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto {
          }

  


          class edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto {
          }



          class edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto {
          }



          class edu.hm.cs.katz.swt2.agenda.service.dto.UserManagementDto {
          }

  

  edu.hm.cs.katz.swt2.agenda.AgendaConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.UserService : anwenderService
  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.TaskService : taskService
  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.TopicService : topicService
  edu.hm.cs.katz.swt2.agenda.initialization.Initializer o-- edu.hm.cs.katz.swt2.agenda.service.UserService : anwenderService
  edu.hm.cs.katz.swt2.agenda.mvc.AbstractController o-- edu.hm.cs.katz.swt2.agenda.service.UserService : userService
  edu.hm.cs.katz.swt2.agenda.mvc.IndexController -up-|> edu.hm.cs.katz.swt2.agenda.mvc.AbstractController
  edu.hm.cs.katz.swt2.agenda.mvc.TaskController -up-|> edu.hm.cs.katz.swt2.agenda.mvc.AbstractController
  edu.hm.cs.katz.swt2.agenda.mvc.TaskController o-- edu.hm.cs.katz.swt2.agenda.service.TaskService : taskService
  edu.hm.cs.katz.swt2.agenda.mvc.TaskController o-- edu.hm.cs.katz.swt2.agenda.service.TopicService : topicService
  edu.hm.cs.katz.swt2.agenda.mvc.TopicController -up-|> edu.hm.cs.katz.swt2.agenda.mvc.AbstractController
  edu.hm.cs.katz.swt2.agenda.mvc.TopicController o-- edu.hm.cs.katz.swt2.agenda.service.TaskService : taskService
  edu.hm.cs.katz.swt2.agenda.mvc.TopicController o-- edu.hm.cs.katz.swt2.agenda.service.TopicService : topicService
  edu.hm.cs.katz.swt2.agenda.mvc.UserController -up-|> edu.hm.cs.katz.swt2.agenda.mvc.AbstractController
  edu.hm.cs.katz.swt2.agenda.mvc.UserController o-- edu.hm.cs.katz.swt2.agenda.service.UserService : userService
  edu.hm.cs.katz.swt2.agenda.persistence.Status o-- edu.hm.cs.katz.swt2.agenda.common.StatusEnum : status
  edu.hm.cs.katz.swt2.agenda.persistence.Status o-- edu.hm.cs.katz.swt2.agenda.persistence.Task : task
  edu.hm.cs.katz.swt2.agenda.persistence.Status o-- edu.hm.cs.katz.swt2.agenda.persistence.User : user
  edu.hm.cs.katz.swt2.agenda.persistence.Task o-- edu.hm.cs.katz.swt2.agenda.persistence.Topic : topic
  edu.hm.cs.katz.swt2.agenda.persistence.Topic o-- edu.hm.cs.katz.swt2.agenda.persistence.User : creator
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl .up.|> edu.hm.cs.katz.swt2.agenda.service.TaskService
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.UserRepository : anwenderRepository
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl o-- edu.hm.cs.katz.swt2.agenda.service.DtoMapper : mapper
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.StatusRepository : statusRepository
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.TaskRepository : taskRepository
  edu.hm.cs.katz.swt2.agenda.service.TaskServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.TopicRepository : topicRepository
  edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl .up.|> edu.hm.cs.katz.swt2.agenda.service.TopicService
  edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.UserRepository : anwenderRepository
  edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl o-- edu.hm.cs.katz.swt2.agenda.service.DtoMapper : mapper
  edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.TopicRepository : topicRepository
  edu.hm.cs.katz.swt2.agenda.service.TopicServiceImpl o-- edu.hm.cs.katz.swt2.agenda.common.UuidProviderImpl : uuidProvider
  edu.hm.cs.katz.swt2.agenda.service.UserServiceImpl .up.|> edu.hm.cs.katz.swt2.agenda.service.UserService
  edu.hm.cs.katz.swt2.agenda.service.UserServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  edu.hm.cs.katz.swt2.agenda.service.UserServiceImpl o-- edu.hm.cs.katz.swt2.agenda.persistence.UserRepository : anwenderRepository
  edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTaskDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto
  edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTopicDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto
  edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto o-- edu.hm.cs.katz.swt2.agenda.common.StatusEnum : status
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto : status
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto : creator
  edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto : topic
  edu.hm.cs.katz.swt2.agenda.service.dto.UserManagementDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto


@enduml
